--- a/04-html/portfolio.html
+++ b/04-html/portfolio.html
@@ -29,7 +29,7 @@
             <h2>About Me</h2>
 
             <figure>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4dLZmjk7KjjGRpJcb33rVnEc0NfiydRB4YQ&s" alt="Portrait of Akhila a software trainee" width="100" height="100">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4dLZmjk7KjjGRpJcb33srVnEc0NfiydRB4YQ&" alt="Portrait of Akhila a software trainee" width="100" height="100">
                 <figcaption>Akhila-software Traineer</figcaption>
             </figure>
 
