--- a/06-javascript/challenge-01/counter.html
+++ b/06-javascript/challenge-01/counter.html
@@ -21,7 +21,7 @@
         </section>
 
         <!-- Set Counter Value Section -->
-        <section class="set-counter">
+        <section class="set-count">
             <h2>Set Counter Value</h2>
             <button id="1">1</button>
             <button id="5">5</button>
